--- a/plugin_development/TerrariaHelper/pom.xml
+++ b/plugin_development/TerrariaHelper/pom.xml
@@ -60,6 +60,13 @@
             <systemPath>${project.basedir}/paper/paper-1.12.2-1620.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>de.tr7zw</groupId>
+            <artifactId>nbtapi</artifactId>
+            <version>2.13.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/itemnbtapi/item-nbt-api-plugin-2.13.1.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>eos.moe</groupId>
             <artifactId>dragoncore</artifactId>
             <version>2.6.2.9</version>
