--- a/server/plugins/Terraria/Data/projectiles.yml
+++ b/server/plugins/Terraria/Data/projectiles.yml
@@ -3216,6 +3216,456 @@
     slowedByWater: true
     liveTime: 60
     penetration: 1
+南十字星蜗:
+    liveTime: 50
+    buffInflict:
+        - "带电|60|1"
+南十字星蜗Ex:
+    projDisguiseName: 南十字星蜗
+    liveTime: 100
+    homing: true
+    buffInflict:
+        - "带电|200|1"
+精金投斧:
+    liveTime: 50
+精金投斧Ex:
+    projDisguiseName: 精金投斧
+    liveTime: 60
+    gravity: 0
+冰花:
+    projectileSize: 1.5
+    liveTime: 80
+    homing: true
+    homingRadius: 24
+    buffInflict:
+        - "霜火|50|1"
+冰花Ex:
+    projDisguiseName: 冰花
+    projectileSize: 1.5
+    liveTime: 200
+    homing: true
+    homingRadius: 24
+    blockHitAction: thru
+    penetration: 2
+    buffInflict:
+        - "霜火|200|1"
+    clusterBomb:
+        amount: 1
+        damageMulti: 1
+        name: 冰花
+        fireOnTimeout: false
+        fireOnCollideEntity: true
+        velocity: 2.25
+硫火飞爪:
+    projectileSize: 1.5
+    liveTime: 80
+    penetration: 9
+    buffInflict:
+        - "硫磺火|200|1"
+利维坦之牙:
+    projectileSize: 1.5
+    liveTime: 80
+    buffInflict:
+        - "剧毒|60|1"
+利维坦之牙Ex:
+    projDisguiseName: 利维坦之牙
+    projectileSize: 1.5
+    liveTime: 80
+    isGrenade: true
+    blastRadius: 1
+    buffInflict:
+        - "剧毒|200|1"
+深渊裂斧:
+    projectileSize: 1.5
+    liveTime: 80
+    buffInflict:
+        - "碎甲|40|1"
+        - "深渊水压|40|1"
+深渊裂斧Ex:
+    projDisguiseName: 深渊裂斧
+    projectileSize: 1.5
+    liveTime: 80
+    buffInflict:
+        - "死亡标记|40|1"
+        - "碎甲|200|1"
+        - "深渊水压|200|1"
+幻想符札:
+    liveTime: 60
+    penetration: 999999
+    enemyInvincibilityFrame: 999999
+    gravity: 0
+    blockHitAction: thru
+    homing: true
+    homingRadius: 24
+    homingAbility: 5
+    spawnProjectiles:
+        interval: 10
+        spawnMechanism: SURROUND
+        damageMulti: 1
+        speed: 2
+        spawnType: 幻想符札幽灵
+幻想符札Ex:
+    projDisguiseName: 幻想符札
+    liveTime: 80
+    penetration: 999999
+    enemyInvincibilityFrame: 999999
+    gravity: 0
+    blockHitAction: thru
+    homing: true
+    homingRadius: 24
+    homingAbility: 5
+    spawnProjectiles:
+        interval: 5
+        spawnMechanism: SURROUND
+        damageMulti: 1
+        speed: 2.25
+        spawnType: 幻想符札幽灵
+幻想符札幽灵:
+    liveTime: 40
+    gravity: 0
+    blockHitAction: thru
+    minimumDamageTicks: 3
+    homing: true
+    homingRadius: 24
+    noHomingTicks: 3
+沙暴手里剑:
+    liveTime: 60
+    projectileSize: 1.5
+    gravity: 0
+    blockHitAction: thru
+    clusterBomb:
+        amount: 3
+        damageMulti: 0.5
+        name: 沙暴沙尘
+        velocity: 0.5
+沙暴手里剑Ex:
+    projDisguiseName: 沙暴手里剑
+    liveTime: 80
+    projectileSize: 1.5
+    gravity: 0
+    blockHitAction: thru
+    clusterBomb:
+        amount: 8
+        damageMulti: 0.5
+        name: 沙暴沙尘
+        velocity: 0.5
+沙暴沙尘:
+    liveTime: 20
+    projectileSize: 0.5
+    noGravityTicks: 0
+末渊石板:
+    liveTime: 60
+    noGravityTicks: 10
+    projectileSize: 3
+    buffInflict:
+        - "深渊水压|60|1"
+    clusterBomb:
+        amount: 2
+        damageMulti: 0.5
+        name: 末渊石板碎块
+        velocity: 0.25
+末渊石板Ex:
+    projDisguiseName: 末渊石板
+    liveTime: 60
+    noGravityTicks: 10
+    projectileSize: 3
+    buffInflict:
+        - "深渊水压|200|1"
+    clusterBomb:
+        amount: 6
+        damageMulti: 0.5
+        name: 末渊石板碎块
+        velocity: 0.25
+末渊石板碎块:
+    liveTime: 20
+    projectileSize: 0.5
+    noGravityTicks: 0
+    buffInflict:
+        - "深渊水压|40|1"
+源野天光:
+    liveTime: 60
+    noGravityTicks: 10
+    projectileSize: 2
+    buffInflict:
+        - "幻星感染|60|1"
+    clusterBomb:
+        amount: 3
+        damageMulti: 0.5
+        name: 源野天光星辰
+        velocity: 1
+源野天光Ex:
+    projDisguiseName: 源野天光
+    liveTime: 80
+    noGravityTicks: 10
+    projectileSize: 2
+    buffInflict:
+        - "幻星感染|200|1"
+    clusterBomb:
+        amount: 4
+        damageMulti: 0.5
+        type: star
+        name: 源野天光流星
+        velocity: 2.75
+源野天光星辰:
+    projDisguiseName: 源野天光
+    liveTime: 100
+    projectileSize: 2
+    gravity: 0
+    blockHitAction: thru
+    homing: true
+    noHomingTicks: 20
+    homingRadius: 24
+    buffInflict:
+        - "幻星感染|40|1"
+源野天光流星:
+    projDisguiseName: 陨落流星
+    liveTime: 30
+    projectileSize: 1
+    gravity: 0
+    blockHitAction: thru
+    isGrenade: true
+    blastRadius: 4
+    buffInflict:
+        - "幻星感染|40|1"
+瘟疫注射器:
+    liveTime: 60
+    noGravityTicks: 10
+    projectileSize: 1.5
+    buffInflict:
+        - "瘟疫|60|1"
+    clusterBomb:
+        amount: 3
+        damageMulti: 0.25
+        name: 瘟疫残渣
+        velocity: 0.6
+瘟疫注射器Ex:
+    projDisguiseName: 瘟疫注射器
+    liveTime: 80
+    noGravityTicks: 10
+    projectileSize: 1.5
+    buffInflict:
+        - "瘟疫|200|1"
+    clusterBomb:
+        amount: 5
+        damageMulti: 0.5
+        name: 瘟疫蜜蜂
+        velocity: 2
+瘟疫残渣:
+    liveTime: 20
+    noGravityTicks: 0
+    buffInflict:
+        - "瘟疫|40|1"
+公爵斩首者:
+    liveTime: 60
+    projectileSize: 3
+    gravity: 0
+    blockHitAction: thru
+    penetration: 1
+星体暴乱:
+    liveTime: 80
+    projectileSize: 0.5
+    gravity: 0
+    blockHitAction: thru
+    homing: true
+    homingRadius: 24
+    homingAbility: 5
+    buffInflict:
+        - "幻星感染|60|1"
+星体暴乱Ex:
+    projDisguiseName: 星体暴乱
+    liveTime: 100
+    projectileSize: 0.5
+    gravity: 0
+    blockHitAction: thru
+    homing: true
+    homingRadius: 32
+    homingAbility: 5
+    buffInflict:
+        - "幻星感染|200|1"
+百变餐叉:
+    projectileSize: 0.5
+    liveTime: 80
+    noGravityTicks: 10
+百变屠刀:
+    projectileSize: 1
+    liveTime: 100
+    noGravityTicks: 10
+掠星镰:
+    projectileSize: 3
+    liveTime: 100
+    penetration: 2
+    gravity: 0
+    blockHitAction: thru
+掠星镰Ex:
+    projDisguiseName: 掠星镰
+    projectileSize: 3
+    liveTime: 200
+    penetration: 5
+    gravity: 0
+    blockHitAction: thru
+血沫重斧:
+    projectileSize: 3
+    liveTime: 80
+    noGravityTicks: 10
+    blockHitAction: thru
+血沫重斧Ex:
+    projDisguiseName: 血沫重斧
+    projectileSize: 3
+    liveTime: 125
+    penetration: 4
+    noGravityTicks: 10
+    blockHitAction: thru
+雷劫:
+    projectileSize: 1.5
+    liveTime: 80
+    gravity: 0
+    blockHitAction: thru
+    buffInflict:
+        - "带电|50|1"
+    clusterBomb:
+        amount: 1
+        damageMulti: 0.75
+        name: 雷劫电弧
+        type: star
+        fireOnTimeout: false
+        velocity: 64
+雷劫Ex:
+    projDisguiseName: 雷劫
+    projectileSize: 1.5
+    liveTime: 100
+    gravity: 0
+    blockHitAction: thru
+    buffInflict:
+        - "带电|200|1"
+    clusterBomb:
+        amount: 3
+        damageMulti: 0.75
+        name: 雷劫电弧
+        type: star
+        fireOnTimeout: false
+        velocity: 64
+雷劫电弧:
+    blockHitAction: thru
+    liveTime: 1
+    trailColor: 186|255|228
+    trailIntensityMulti: 2
+    buffInflict:
+        - "带电|200|1"
+遗忘之颚:
+    projectileSize: 0.5
+    blockHitAction: thru
+    liveTime: 60
+    homing: true
+    homingRadius: 32
+    homingAbility: 5
+    buffInflict:
+        - "深渊水压|50|1"
+遗忘之颚Ex:
+    projDisguiseName: 遗忘之颚
+    projectileSize: 0.5
+    blockHitAction: thru
+    liveTime: 80
+    homing: true
+    homingRadius: 32
+    homingAbility: 6
+    buffInflict:
+        - "深渊水压|200|1"
+        - "碎甲|200|1"
+渊海哑铃:
+    projectileSize: 3
+    blockHitAction: thru
+    liveTime: 60
+    buffInflict:
+        - "深渊水压|80|1"
+渊海哑铃Ex:
+    projDisguiseName: 渊海哑铃
+    projectileSize: 3
+    blockHitAction: thru
+    liveTime: 80
+    buffInflict:
+        - "深渊水压|200|1"
+死神遗镰:
+    projectileSize: 3
+    penetration: 3
+    blockHitAction: thru
+    gravity: 0
+    liveTime: 80
+    buffInflict:
+        - "硫磺海剧毒|80|1"
+死神遗镰Ex:
+    projDisguiseName: 死神遗镰
+    projectileSize: 3
+    blockHitAction: thru
+    penetration: 9
+    gravity: 0
+    liveTime: 100
+    buffInflict:
+        - "硫磺海剧毒|200|1"
+终结者之刃:
+    projectileSize: 2
+    blockHitAction: thru
+    homing: true
+    homingRadius: 32
+    homingAbility: 5
+    gravity: 0
+    liveTime: 125
+    buffInflict:
+        - "弑神怒焰|80|1"
+终曲黎明:
+    projectileSize: 3
+    blockHitAction: thru
+    gravity: 0
+    liveTime: 80
+    buffInflict:
+        - "龙焰|80|1"
+    clusterBomb:
+        amount: 8
+        damageMulti: 0.75
+        name: 巨龙之怒火球
+        type: arc
+        fireOnTimeout: false
+        velocity: 2.75
+焦锅:
+    projectileSize: 2.5
+    blockHitAction: thru
+    gravity: 0
+    liveTime: 80
+    buffInflict:
+        - "破晓|800|1"
+衍曜旋刃:
+    projectileSize: 4
+    blockHitAction: thru
+    gravity: 0
+    liveTime: 60
+    buffInflict:
+        - "超位崩解|80|1"
+    clusterBomb:
+        amount: 1
+        damageMulti: 0.75
+        name: 衍曜棱晶火箭
+        velocity: 3
+衍曜旋刃Ex:
+    projectileSize: 4
+    blockHitAction: thru
+    gravity: 0
+    liveTime: 80
+    buffInflict:
+        - "超位崩解|200|1"
+    clusterBomb:
+        amount: 90
+        type: spread
+        damageMulti: 0.75
+        name: 衍曜棱晶火箭
+        velocity: 3
+衍曜棱晶火箭:
+    projectileSize: 1.5
+    minimumDamageTicks: 5
+    homing: true
+    homingRadius: 48
+    homingAbility: 6
+    liveTime: 100
+    buffInflict:
+        - "超位崩解|50|1"
 剧毒花瓣:
     gravity: 0
     speedMultiPerTick: 0.95
