--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -1199,6 +1199,14 @@
     maxHealthMulti: 0.75
   worth: 20000
   rarity: 0
+测试防御:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    defence: 1000
+  worth: 20000
+  rarity: 0
 向导巫毒娃娃:
   item: LEASH
   lore:
@@ -2223,6 +2231,17 @@ Drew之翼:
     buffInflictRanged: 超位崩解|80|1
   worth: 40000000
   rarity: 16
+灵魂之戒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r在试图使用魔力药水时，改为以生命值为代价回满魔力
+  - §r此伤害不会致命且依旧会正常造成魔力疾病效果
+  attributes:
+    maxHealth: 22
+    defence: 2
+  worth: 200000
+  rarity: 1
 魔能谐振仪:
   item: LEASH
   lore:
@@ -3021,10 +3040,8 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r受到伤害时会按照最终伤害损失防御
-  - §r因此损失的防御会随着时间流逝而逐渐恢复
-  - §r每恢复1点防御便为你恢复1点生命值
-  - §r只对超过50点的伤害有效
+  - §r防御损伤的数值增加为最终伤害与防御力之间较大值的一半
+  - §r损伤的防御受击后无修复冷却且会恢复等量生命值
   - §r“哦天哪！那是接近的！”
   worth: 24000000
   rarity: 12
@@ -3032,12 +3049,10 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r伤害结算前会分别进行以下尝试：
-  - §r-> 试图损失至多为最终伤害75%的防御
-  - §r-> 短暂恢复最多为最终伤害95%的生命值，但成功恢复的生命值将被快速扣除
-  - §r因此损失的防御会随着时间流逝而逐渐恢复
-  - §r每恢复1点防御便为你恢复1点生命值
-  - §r只对超过100点的伤害有效
+  - §r防御损伤的数值增加为最终伤害与防御力之间较大值的一半
+  - §r损伤的防御受击后无修复冷却且会恢复等量生命值
+  - §r一次性受到至少100点伤害时短暂恢复最多为最终伤害95%的生命值
+  - §r成功恢复的这部分生命值将被快速扣除
   - §r“竟然为了一滴血付出了这么多”
   attributes:
     maxHealthMulti: 0.25
@@ -3105,6 +3120,7 @@ Drew之翼:
   - §r[饰品]
   attributesFormI:
     damageMulti: 0.35
+    regenMulti: -0.35
     regen: -16
   attributesFormII:
     maxHealthMulti: -0.5
@@ -9654,7 +9670,7 @@ Dodu的手炮:
 绯红恶魔:
   item: DIAMOND_SWORD
   lore:
-  - §r普通攻击扔出一把神枪，在击中敌人时会产生斯卡雷特爆炸
+  - §r普通攻击扔出一把必中的神枪，在击中敌人时会产生斯卡雷特爆炸
   - §r潜伏攻击会使神枪获得生命汲取并且会在击中敌人时爆成一片追踪弹幕
   - §r“神枪「冈格尼尔」”
   attributes:
@@ -16956,6 +16972,7 @@ Dodu的手炮:
 机械矿车:
   item: IRON_INGOT
   lore:
+  - §6专家模式物品
   - §7▷ 矿车：在主手时，右键铁轨将乘坐矿车；在BOSS存活时速度将大大降低
   worth: 3000000
   rarity: 1000
