--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -2235,7 +2235,8 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r在试图使用魔力药水时，改为以生命值为代价回满魔力
+  - §r在试图使用魔力药水时改为恢复170点魔力
+  - §r作为代价，玩家会损耗50点生命值
   - §r此伤害不会致命且依旧会正常造成魔力疾病效果
   attributes:
     maxHealth: 22
@@ -2703,10 +2704,10 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r使用盗贼武器发射弹幕时，会召唤一个完美复制品从天而降
+  - §r使用盗贼武器时发射的弹幕量翻倍
   attributes:
-    damageMulti: -0.35
-    damageRogueMulti: -0.15
+    damageMulti: -0.3
+    damageRogueMulti: -0.1
   worth: 24000000
   rarity: 12
 日蚀魔镜:
@@ -3040,7 +3041,7 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r防御损伤的数值增加为最终伤害与防御力之间较大值的一半
+  - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
   - §r损伤的防御受击后无修复冷却且会恢复等量生命值
   - §r“哦天哪！那是接近的！”
   worth: 24000000
@@ -3049,7 +3050,7 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r防御损伤的数值增加为最终伤害与防御力之间较大值的一半
+  - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
   - §r损伤的防御受击后无修复冷却且会恢复等量生命值
   - §r一次性受到至少100点伤害时短暂恢复最多为最终伤害95%的生命值
   - §r成功恢复的这部分生命值将被快速扣除
@@ -16848,7 +16849,7 @@ Dodu的手炮:
 蘑菇:
   item: CLAY_BALL
   lore:
-  - §r使用恢复30生命值
+  - §r“不再会被误食”
   worth: 500
   rarity: 0
 发光蘑菇:
